# brokkr

./: BYTECODE.md  Cargo.toml  README.md  bytecode_spec.yaml
.github/workflows/: rust.yml
scripts/: gen_bytecode_md_spec.rb
src/: bin.rs  lib.rs
src/vm/: address.rs  call_stack.rs  evaluation.rs  frame.rs  instructions.rs  mod.rs  opcodes.rs  unmarshal.rs
