[package]
name = "brokkr"
description = "Virtual Machine / Bytecode Interpreter for set-theoretic languages."
homepage      = "https://github.com/Demonstrandum/brokkr"
repository    = "https://github.com/Demonstrandum/brokkr"
documentation = "https://github.com/Demonstrandum/brokkr"
keywords = ["set-theory", "assembler", "bytecode", "interpreter", "virtual-machine"]
license = "GPL-3.0"
readme = "README.md"
version = "0.1.0"
authors = ["Demonstrandum <moi@knutsen.co>"]
edition = "2018"

[features]
debug = []  # No deps.

[lib]
name = "brokkr"
path = "src/lib.rs"

[[bin]]
name = "brokkr"
path = "src/bin.rs"

[dependencies]
lazy_static = "1.3.0"
num-traits = "0.2"
num-derive = "0.3"

